objects/ssot__PrivacyConsentLog__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ConsentActionId__c</fullName>
        <label>Consent Action</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentTriggeringEventTypeId__c</fullName>
        <label>Consent Triggering Event Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointId__c</fullName>
        <label>Contact Point</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLat__c</fullName>
        <label>Device Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DeviceLgtd__c</fullName>
        <label>Device Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelActionId__c</fullName>
        <label>Engagement Channel Action</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelTypeId__c</fullName>
        <label>Engagement Channel Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Privacy Consent Log Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PrivacyConsentActivityDttm__c</fullName>
        <label>Privacy Consent Activity Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PrivacyConsentLogCategoryId__c</fullName>
        <label>Privacy Consent Log Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrivacyConsentStatusId__c</fullName>
        <label>Privacy Consent Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761157512_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConsentAction_Id_map_PrivacyConsentL_rel</label>
        <referenceTo>ssot__ConsentAction__dlm</referenceTo>
        <relationshipLabel>ConsentAction_Id_map_PrivacyConsentL_rel</relationshipLabel>
        <relationshipName>rel_1697761157512_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761158642_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactPointAddress_Id_map_PrivacyCo_rel</label>
        <referenceTo>ssot__ContactPointAddress__dlm</referenceTo>
        <relationshipLabel>ContactPointAddress_Id_map_PrivacyCo_rel</relationshipLabel>
        <relationshipName>rel_1697761158642_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761160097_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactPointApp_Id_map_PrivacyConsen_rel</label>
        <referenceTo>ssot__ContactPointApp__dlm</referenceTo>
        <relationshipLabel>ContactPointApp_Id_map_PrivacyConsen_rel</relationshipLabel>
        <relationshipName>rel_1697761160097_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>